--- a/INDEX.html
+++ b/INDEX.html
@@ -165,12 +165,9 @@
         <div class="box">
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">HTML Developer(2010-2020)</div>
+            <div class="vertical-title">Education</div>
             <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
-              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
-              quia amet delectus ullam voluptates veniam quod. Libero ratione
-              praesentium velit eveniet voluptates.
+              
             </div>
           </div>
           <div class="vertical">
@@ -214,9 +211,7 @@
         <div class="footer-second">
           <ul>
             <li>Home</li>
-            <li>Home</li>
-            <li>Home</li>
-            <li>Home</li>
+            
           </ul>
         </div>
         <div class="footer-third"></div>
