--- a/INDEX.html
+++ b/INDEX.html
@@ -167,37 +167,30 @@
             <img class="image-top" src="developer.png" alt="" />
             <div class="vertical-title">Education</div>
             <div class="vertical-desc">
-              
+                  I have done my schooling from SVP shivpuri and currently now i am pursuing B.tech in Information technology
+                  from IIIT Allahabad
             </div>
           </div>
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">HTML Developer(2010-2020)</div>
+            <div class="vertical-title">Sports</div>
             <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
-              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
-              quia amet delectus ullam voluptates veniam quod. Libero ratione
-              praesentium velit eveniet voluptates.
+                I am State level Silver Medalist Handball player I Participated in Nationls tournaments Organised By
+                S.G.F.I 
             </div>
           </div>
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">HTML Developer(2010-2020)</div>
+            <div class="vertical-title">Hobbies</div>
             <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
-              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
-              quia amet delectus ullam voluptates veniam quod. Libero ratione
-              praesentium velit eveniet voluptates.
+                 Playing Games and reading books 
             </div>
           </div>
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">HTML Developer(2010-2020)</div>
+            <div class="vertical-title">Participation</div>
             <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
-              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
-              quia amet delectus ullam voluptates veniam quod. Libero ratione
-              praesentium velit eveniet voluptates.
+                 I Participated in Hackthon and various workshop
             </div>
           </div>
         </div>
