--- a/INDEX.html
+++ b/INDEX.html
@@ -124,9 +124,27 @@
     }
 
     .footer{
-      height: 23px;
+      display: flex;
       padding: 23px 122px;
       justify-content: space-evenly;
+
+    }
+    .footer-second{
+      display: flex;
+      padding: 23px 122px;
+      justify-content: space-evenly;
+      
+    }
+    .footer ul{
+      list-style: none;
+    }
+    .footer >div{
+      width: 323px;
+    }
+    .footers-right{
+      text-align: center;
+      color: gray;
+      padding: 12px;
     }
   </style>
   <body>
@@ -165,32 +183,42 @@
         <div class="box">
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">Education</div>
+            <div class="vertical-title">HTML Developer(2010-2020)</div>
             <div class="vertical-desc">
-                  I have done my schooling from SVP shivpuri and currently now i am pursuing B.tech in Information technology
-                  from IIIT Allahabad
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
+              quia amet delectus ullam voluptates veniam quod. Libero ratione
+              praesentium velit eveniet voluptates.
             </div>
           </div>
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">Sports</div>
+            <div class="vertical-title">HTML Developer(2010-2020)</div>
             <div class="vertical-desc">
-                I am State level Silver Medalist Handball player I Participated in Nationls tournaments Organised By
-                S.G.F.I 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
+              quia amet delectus ullam voluptates veniam quod. Libero ratione
+              praesentium velit eveniet voluptates.
             </div>
           </div>
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">Hobbies</div>
+            <div class="vertical-title">HTML Developer(2010-2020)</div>
             <div class="vertical-desc">
-                 Playing Games and reading books 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
+              quia amet delectus ullam voluptates veniam quod. Libero ratione
+              praesentium velit eveniet voluptates.
             </div>
           </div>
           <div class="vertical">
             <img class="image-top" src="developer.png" alt="" />
-            <div class="vertical-title">Participation</div>
+            <div class="vertical-title">HTML Developer(2010-2020)</div>
             <div class="vertical-desc">
-                 I Participated in Hackthon and various workshop
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              nihil magnam perspiciatis explicabo, minus veritatis nisi minima
+              quia amet delectus ullam voluptates veniam quod. Libero ratione
+              praesentium velit eveniet voluptates.
             </div>
           </div>
         </div>
@@ -204,11 +232,16 @@
         <div class="footer-second">
           <ul>
             <li>Home</li>
-            
+            <li>About</li>
+            <li>services</li>
+            <li>Contact</li>
           </ul>
         </div>
         <div class="footer-third"></div>
         <div class="footer-fourth"></div>
+      </div>
+      <div class="footers-right">
+        copyright &#169; deepaksportfolio.com | All rights reserved
       </div>
     </footer>
 
